unfunctional planets | complete web

--- a/src/app/components/our-menu/our-menu.component.html
+++ b/src/app/components/our-menu/our-menu.component.html
@@ -2,33 +2,75 @@
   <div class="heading">
     <h1>✨ Our Menu ✨</h1>
   </div>
+
   <div class="container">
-    <img
-      class="planet first-planet"
-      src="../../../assets/imgs/Planets-Playground/FirstPlanet.svg"
-      alt="Planet1"
-    />
-    <img
-      class="planet second-planet"
-      src="../../../assets/imgs/Planets-Playground/SecondPlanet.svg"
-      alt="Planet2"
-    />
-    <br />
-    <img
-      class="planet third-planet"
-      src="../../../assets/imgs/Planets-Playground/ThirdPlanet.svg"
-      alt="Planet3"
-    />
-    <img
-      class="planet fourth-planet"
-      src="../../../assets/imgs/Planets-Playground/FourthPlanet.svg"
-      alt="Planet4"
-    />
-    <br />
-    <img
-      class="planet fifth-planet"
-      src="../../../assets/imgs/Planets-Playground/FifthPlanet.svg"
-      alt="Planet5"
-    />
+    <div class="planet-counter">
+      <a href="">
+        <img
+          src="../../../assets/imgs/Planets-Playground/FirstPlanet.svg"
+          alt=""
+        />
+      </a>
+      <img
+        src="../../../assets/imgs/Planets-Playground/UFOs/UFO1.svg"
+        alt=""
+        style="margin-left: 15em"
+        class="animate__animated animate__heartBeat animate__slow animate__infinite UFO"
+      />
+    </div>
+
+    <div class="planet-counter">
+      <img
+        src="../../../assets/imgs/Planets-Playground/UFOs/UFO2.svg"
+        alt=""
+        style="margin-right: 10em"
+        class="animate__animated animate__heartBeat animate__slow animate__infinite UFO"
+      />
+      <a href="">
+        <img
+          src="../../../assets/imgs/Planets-Playground/SecondPlanet.svg"
+          alt=""
+        />
+      </a>
+    </div>
+
+    <div class="planet-counter">
+      <a href="">
+        <img
+          src="../../../assets/imgs/Planets-Playground/ThirdPlanet.svg"
+          alt=""
+        />
+      </a>
+      <img
+        src="../../../assets/imgs/Planets-Playground/UFOs/UFO3.svg"
+        alt=""
+        style="margin-left: 14em"
+        class="animate__animated animate__heartBeat animate__slow animate__infinite UFO"
+      />
+    </div>
+
+    <div class="planet-counter">
+      <a href="">
+        <img
+          src="../../../assets/imgs/Planets-Playground/FourthPlanet.svg"
+          alt=""
+        />
+      </a>
+    </div>
+
+    <div class="planet-counter">
+      <a href="">
+        <img
+          src="../../../assets/imgs/Planets-Playground/FifthPlanet.svg"
+          alt=""
+        />
+      </a>
+      <img
+        src="../../../assets/imgs/Planets-Playground/UFOs/UFO4.svg"
+        alt=""
+        style="margin-left: 7em"
+        class="animate__animated animate__heartBeat animate__slow animate__infinite UFO"
+      />
+    </div>
   </div>
 </div>
