--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,19 +8,21 @@
       <li><a>Contact</a></li>
     </ul>
   </div>
-  <div class="first-section">
+  <div class="ngsreveal first-section" >
     <div class="left-section">
       <h1 class="animate__animated animate__pulse">
         ¡Acompaña a tus pequeños <br />
         astronautas en una comida <br />
         intergaláctica única!
       </h1>
-      <button class="action-button animate__animated animate__bounceIn animate__slower">Nuestro Menu</button>
+      <button class="action-button animate__animated animate__bounceIn animate__slower"><h1>Nuestro Menu</h1></button>
     </div>
     <img class="img-spaceship" src="../assets/imgs/spaceship.svg" />
     <div class="right-section">
-      <img src="../assets/imgs/Space.svg" height="500px" />
+      <img class="space-image" src="../assets/imgs/Space.svg" height="500px" />
     </div>
   </div>
   <app-our-menu></app-our-menu>
+  <app-about></app-about>
+  <app-footer></app-footer>
 </div>
