[LAYOUT] Planets components & footer

--- a/src/app/components/our-menu/our-menu.component.html
+++ b/src/app/components/our-menu/our-menu.component.html
@@ -5,7 +5,8 @@
 
   <div class="container">
     <div class="planet-counter">
-      <a href="">
+      <a href="../../assets/imgs/Menu's/menu 1.pdf" target="_blank">
+        <h1 class="text-center fs-5">falta menu de Desayunos</h1>
         <img
           src="../../../assets/imgs/Planets-Playground/FirstPlanet.svg"
           alt=""
@@ -26,7 +27,8 @@
         style="margin-right: 10em"
         class="animate__animated animate__heartBeat animate__slow animate__infinite UFO"
       />
-      <a href="">
+      <a href="../../assets/imgs/Menu's/menu 2.pdf" target="_blank">
+        <h1 class="text-center fs-5">falta menu de Entradas</h1>
         <img
           src="../../../assets/imgs/Planets-Playground/SecondPlanet.svg"
           alt=""
@@ -35,7 +37,8 @@
     </div>
 
     <div class="planet-counter">
-      <a href="">
+      <a>
+        <h1 class="text-center fs-5">Platos Fuertes</h1>
         <img
           src="../../../assets/imgs/Planets-Playground/ThirdPlanet.svg"
           alt=""
@@ -50,7 +53,8 @@
     </div>
 
     <div class="planet-counter">
-      <a href="">
+      <a href="../../assets/imgs/Menu's/menu 2.pdf" target="_blank">
+        <h1 class="text-center fs-5">Postres & Bebidas</h1>
         <img
           src="../../../assets/imgs/Planets-Playground/FourthPlanet.svg"
           alt=""
@@ -59,7 +63,8 @@
     </div>
 
     <div class="planet-counter">
-      <a href="">
+      <a  href="../../assets/imgs/Menu's/menu 3.pdf" target="_blank">
+        <h1 class="text-center fs-5">Platos de la Casa</h1>
         <img
           src="../../../assets/imgs/Planets-Playground/FifthPlanet.svg"
           alt=""
