[LAYOUT & FUNCTIONALITY] Added {Cine} and functionality to screens

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,6 +4,7 @@
     <ul>
       <li><a>Home</a></li>
       <li><a (click)="scrollToMenu()">Menu</a></li>
+      <li><a (click)="scrollToCine()">Cine</a></li>
       <li><a (click)="scrollToAbout()">About</a></li>
       <li><a (click)="scrollToFooter()">Contact</a></li>
     </ul>
@@ -27,6 +28,7 @@
     </div>
   </div>
   <app-our-menu id="our-menu"></app-our-menu>
+  <app-cine-menu id="cine"></app-cine-menu>
   <app-about id="about-us"></app-about>
   <app-footer id="footer"></app-footer>
 </div>
