--- a/src/app/components/our-menu/our-menu.component.html
+++ b/src/app/components/our-menu/our-menu.component.html
@@ -6,7 +6,7 @@
   <div class="container">
     <div class="planet-counter">
       <a href="../../assets/imgs/Menu's/menu 1.pdf" target="_blank">
-        <h1 class="text-center fs-5">falta menu de Desayunos</h1>
+        <h1 class="text-center fs-5">Desayunos & Almuerzos</h1>
         <img
           src="../../../assets/imgs/Planets-Playground/FirstPlanet.svg"
           alt=""
@@ -16,38 +16,6 @@
         src="../../../assets/imgs/Planets-Playground/UFOs/UFO1.svg"
         alt=""
         style="margin-left: 15em"
-        class="animate__animated animate__heartBeat animate__slow animate__infinite UFO"
-      />
-    </div>
-
-    <div class="planet-counter">
-      <img
-        src="../../../assets/imgs/Planets-Playground/UFOs/UFO2.svg"
-        alt=""
-        style="margin-right: 10em"
-        class="animate__animated animate__heartBeat animate__slow animate__infinite UFO"
-      />
-      <a href="../../assets/imgs/Menu's/menu 2.pdf" target="_blank">
-        <h1 class="text-center fs-5">falta menu de Entradas</h1>
-        <img
-          src="../../../assets/imgs/Planets-Playground/SecondPlanet.svg"
-          alt=""
-        />
-      </a>
-    </div>
-
-    <div class="planet-counter">
-      <a>
-        <h1 class="text-center fs-5">Platos Fuertes</h1>
-        <img
-          src="../../../assets/imgs/Planets-Playground/ThirdPlanet.svg"
-          alt=""
-        />
-      </a>
-      <img
-        src="../../../assets/imgs/Planets-Playground/UFOs/UFO3.svg"
-        alt=""
-        style="margin-left: 14em"
         class="animate__animated animate__heartBeat animate__slow animate__infinite UFO"
       />
     </div>
@@ -63,8 +31,40 @@
     </div>
 
     <div class="planet-counter">
-      <a  href="../../assets/imgs/Menu's/menu 3.pdf" target="_blank">
+      <a href="../../assets/imgs/Menu's/menu 3.pdf" target="_blank">
         <h1 class="text-center fs-5">Platos de la Casa</h1>
+        <img
+          src="../../../assets/imgs/Planets-Playground/ThirdPlanet.svg"
+          alt=""
+        />
+      </a>
+      <img
+        src="../../../assets/imgs/Planets-Playground/UFOs/UFO3.svg"
+        alt=""
+        style="margin-left: 14em"
+        class="animate__animated animate__heartBeat animate__slow animate__infinite UFO"
+      />
+    </div>
+
+    <div class="planet-counter">
+      <img
+        src="../../../assets/imgs/Planets-Playground/UFOs/UFO2.svg"
+        alt=""
+        style="margin-right: 10em"
+        class="animate__animated animate__heartBeat animate__slow animate__infinite UFO"
+      />
+      <a href="../../assets/imgs/Menu's/menu 4.pdf" target="_blank">
+        <h1 class="text-center fs-5">Menu Adultos</h1>
+        <img
+          src="../../../assets/imgs/Planets-Playground/SecondPlanet.svg"
+          alt=""
+        />
+      </a>
+    </div>
+
+    <div class="planet-counter">
+      <a href="../../assets/imgs/Menu's/menu dominicano.pdf" target="_blank">
+        <h1 class="text-center fs-5">Menu Dominicano</h1>
         <img
           src="../../../assets/imgs/Planets-Playground/FifthPlanet.svg"
           alt=""
