--- a/src/app/components/our-menu/our-menu.component.scss
+++ b/src/app/components/our-menu/our-menu.component.scss
@@ -15,8 +15,13 @@
     a{
       text-decoration: none;
       color: white;
+        img{
+          width: fit-content;
+          max-width: 100%;
+        }
     }
   }
+  
   .planet-counter:nth-child(1){
     display: flex;
     justify-content: start;
@@ -66,10 +71,12 @@
       .planet-counter{
         position: relative;
         width: 100%;
+        margin: 7rem 0;
         a{
           width: 100%;
           img{
             width: fit-content;
+            max-width: 100%;
           }
         }
       }
