feat: Final Layout and Functionality

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -3,8 +3,8 @@
         <h1>✨ Contact Us ✨</h1>
         <div class="contact-options">
             <ul>
-            <li for=""><img src="../../../assets/imgs/icons/instagram (2) 1.svg" alt="" srcset=""> @peq.uestarsrd</li>
-            <li for=""><img src="../../../assets/imgs/icons/placeholder-filled-point 1.svg" alt="" srcset=""> Flamingo St, 7753</li>
+            <li for=""><img src="../../../assets/imgs/icons/instagram (2) 1.svg" alt="" srcset=""> @pequestars.rd</li>
+            <li for=""><img src="../../../assets/imgs/icons/placeholder-filled-point 1.svg" alt="" srcset=""> Bella Vista, 7732</li>
         </ul>
         </div>
     </div>
